tests/rename/should_compile/T17832M1.hs
module T17832M1 (main) where
main :: IO ()
main = return ()
