tests/rename/should_fail/Rnfail040_A.hs
module Rnfail040_A( nub ) where
  nub = True
